clearing input fields after item being added

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 .budget__income,
-.budget__expenses {
+.budget__expense {
     padding: 12px;
     text-transform: uppercase;
 }
@@ -74,12 +74,12 @@ body {
     background-color: #28B9B5;
 }
 
-.budget__expenses {
+.budget__expense {
     background-color: #FF5049;
 }
 
 .budget__income--text,
-.budget__expenses--text {
+.budget__expense--text {
     float: left;
     font-size: 13px;
     color: #444;
@@ -87,13 +87,13 @@ body {
 }
 
 .budget__income--value,
-.budget__expenses--value {
+.budget__expense--value {
     letter-spacing: 1px;
     float: left;
 }
 
 .budget__income--percentage,
-.budget__expenses--percentage {
+.budget__expense--percentage {
     float: left;
     width: 34px;
     font-size: 11px;
@@ -101,7 +101,7 @@ body {
     margin-left: 10px;
 }
 
-.budget__expenses--percentage {
+.budget__expense--percentage {
     background-color: rgba(255, 255, 255, 0.2);
     text-align: center;
     border-radius: 3px;
@@ -187,7 +187,7 @@ body {
     margin-right: 50px;
 }
 
-.expenses {
+.expense {
     float: left;
     width: 475px;
 }
@@ -200,7 +200,7 @@ h2 {
 }
 
 .icome__title { color: #28B9B5; }
-.expenses__title { color: #FF5049; }
+.expense__title { color: #FF5049; }
 
 .item {
     padding: 13px;
@@ -236,9 +236,9 @@ h2 {
     color: #28B9B5;
 }
 
-.expenses .item__value,
-.expenses .item__percentage,
-.expenses .item__delete--btn {
+.expense .item__value,
+.expense .item__percentage,
+.expense .item__delete--btn {
     color: #FF5049;
 }
 
