--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 .right { float: right; }
 .red { color: #FF5049 !important; }
 .red-focus:focus { border: 1px solid #FF5049 !important; }
+.red-hover:hover { border: 1px solid #FF5049 !important; }
 
 /**********************************************
 *** TOP PART
